--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
-<a routerLink="">Home</a> |<a routerLink="products">Products</a>| <a routerLink="basket">Basket</a> |<a routerLink="admin">Admin</a> 
+<div class="row">
+    <div class="container ">
 
-<router-outlet></router-outlet>
+        <div class="col-md-10 mx-auto">
+            <nav class="navbar navbar-expand-lg bg-light">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">ETicaret Mini</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" routerLink="products">Products</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" routerLink="basket">Basket</a>
+                            </li>
+                            <li><a class="btn btn-outline-success" type="submit" routerLink="admin">Admin Paneline
+                                    Git</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="col-md-10 mx-auto">
+            <router-outlet></router-outlet>
+        </div>
+
+    </div>
+</div>
