--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,3 +34,6 @@
 
     </div>
 </div>
+
+<ngx-spinner type="ball-spin" name="s1"></ngx-spinner>
+<ngx-spinner type="ball-triangle-path" name="s2"></ngx-spinner>
