--- a/src/app/admin/components/products/products.component.html
+++ b/src/app/admin/components/products/products.component.html
@@ -1,1 +1,4 @@
-<p>products works!</p>
+<mat-drawer-container class="example-container">
+    <mat-drawer mode="side" opened><app-create-product></app-create-product></mat-drawer>
+    <mat-drawer-content><app-list-product></app-list-product></mat-drawer-content>
+  </mat-drawer-container>
