--- a/src/app/admin/components/customers/customers.component.html
+++ b/src/app/admin/components/customers/customers.component.html
@@ -1,1 +1,6 @@
-<p>customers works!</p>
+
+<mat-drawer-container class="example-container">
+  <mat-drawer mode="side" opened><app-create></app-create></mat-drawer>
+  <mat-drawer-content><app-list></app-list></mat-drawer-content>
+</mat-drawer-container>
+
