--- a/src/app/admin/components/products/list-product/list-product.component.html
+++ b/src/app/admin/components/products/list-product/list-product.component.html
@@ -33,6 +33,10 @@
       </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
   </table>
-  
-  
+  <mat-paginator (page)="pageChanged()"
+  [pageSizeOptions]="[5, 10, 20]"
+  showFirstLastButtons 
+  aria-label="Select page of periodic elements">
+</mat-paginator>
