--- a/src/app/admin/components/products/products.component.html
+++ b/src/app/admin/components/products/products.component.html
@@ -1,4 +1,4 @@
 <mat-drawer-container class="example-container">
-    <mat-drawer mode="side" opened><app-create-product></app-create-product></mat-drawer>
+    <mat-drawer mode="side" opened><app-create-product (createdProduct)="createdProduct($event)"></app-create-product></mat-drawer>
     <mat-drawer-content><app-list-product></app-list-product></mat-drawer-content>
   </mat-drawer-container>
