--- a/src/app/admin/components/products/list-product/list-product.component.html
+++ b/src/app/admin/components/products/list-product/list-product.component.html
@@ -2,34 +2,43 @@
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
-  
+
     <!-- Position Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef> Name</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
-  
+
     <!-- Name Column -->
     <ng-container matColumnDef="stock">
       <th mat-header-cell *matHeaderCellDef> Stock </th>
       <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
     </ng-container>
-  
+
     <!-- Weight Column -->
     <ng-container matColumnDef="price">
       <th mat-header-cell *matHeaderCellDef> Weight </th>
       <td mat-cell *matCellDef="let element"> {{element.price}} </td>
     </ng-container>
-  
+
     <!-- Symbol Column -->
     <ng-container matColumnDef="createdDate">
       <th mat-header-cell *matHeaderCellDef> CreatedDate </th>
       <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="modifiedDate">
         <th mat-header-cell *matHeaderCellDef> ModifiedDate </th>
         <td mat-cell *matCellDef="let element"> {{element.modifiedDate}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="edit">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element" appEdit ></td>
+      </ng-container>
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef>  </th>
+        <td mat-cell *matCellDef="let element" appDelete></td>
       </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
@@ -37,6 +46,6 @@
   </table>
   <mat-paginator (page)="pageChanged()"
   [pageSizeOptions]="[5, 10, 20]"
-  showFirstLastButtons 
+  showFirstLastButtons
   aria-label="Select page of periodic elements">
 </mat-paginator>
