--- a/src/app/admin/components/products/list-product/list-product.component.html
+++ b/src/app/admin/components/products/list-product/list-product.component.html
@@ -38,7 +38,7 @@
       </ng-container>
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef>  </th>
-        <td mat-cell *matCellDef="let element" appDelete></td>
+        <td [id]="element.id" (callback)="listProduct()" mat-cell *matCellDef="let element" appDelete></td>
       </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
