* Upload html implemented

--- a/src/app/admin/components/products/create-product/create-product.component.html
+++ b/src/app/admin/components/products/create-product/create-product.component.html
@@ -12,3 +12,5 @@
   </mat-form-field>
 
   <button  mat-raised-button color="accent" class="form" (click)="create(txtName,txtPrice,txtStock)">Create Product</button>
+
+  <app-file-upload></app-file-upload>
