--- a/src/app/admin/components/products/create-product/create-product.component.html
+++ b/src/app/admin/components/products/create-product/create-product.component.html
@@ -12,5 +12,5 @@
   </mat-form-field>
 
   <button  mat-raised-button color="accent" class="form" (click)="create(txtName,txtPrice,txtStock)">Create Product</button>
-
-  <app-file-upload></app-file-upload>
+<!--Bu modül dışarıdan options parametresi beklemektedir.O yüzden bu modüle parametreler de tanımlandığı yerde fileUpload options değişkeni üzerinden parametre olarak gelir-->
+  <app-file-upload [options]="fileUploadOptions"></app-file-upload>
