--- a/src/app/common/file-upload/file-upload.component.html
+++ b/src/app/common/file-upload/file-upload.component.html
@@ -1,16 +1,16 @@
 <div class="center">
-  <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"
-                 (onFileOver)="fileOver($event)" (onFileLeave)="fileLeave($event)">
-    <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector">
-      Optional custom content that replaces the the entire default content.
-      <button type="button" (click)="openFileSelector()">Browse Files</button>
+  <ngx-file-drop dropZoneLabel="Drop files here" (onFileDrop)="dropped($event)"[accept]="options.accept">
+                 
+    <ng-template ngx-file-drop-content-tmp let-openFileSelector="openFileSelector" >
+      {{options.explanation}}
+      <button class="btn btn-success btn-sm" type="button" (click)="openFileSelector()">Dosya Seç</button>
     </ng-template>
   </ngx-file-drop>
-  <div class="upload-table">
+  <div class="upload-table" *ngIf="files">
     <table class="table">
       <thead>
         <tr>
-          <th>Name</th>
+          <th>Seçilen Dosyalar:</th>
         </tr>
       </thead>
       <tbody class="upload-name-style">
