--- a/src/app/admin/components/products/list-product/list-product.component.html
+++ b/src/app/admin/components/products/list-product/list-product.component.html
@@ -1,49 +1,56 @@
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-    <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+  <!-- Position Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef> Name</th>
+    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+  </ng-container>
 
-    <!-- Position Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name</th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
+  <!-- Name Column -->
+  <ng-container matColumnDef="stock">
+    <th mat-header-cell *matHeaderCellDef> Stock </th>
+    <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
+  </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="stock">
-      <th mat-header-cell *matHeaderCellDef> Stock </th>
-      <td mat-cell *matCellDef="let element"> {{element.stock}} </td>
-    </ng-container>
+  <!-- Weight Column -->
+  <ng-container matColumnDef="price">
+    <th mat-header-cell *matHeaderCellDef> Weight </th>
+    <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+  </ng-container>
 
-    <!-- Weight Column -->
-    <ng-container matColumnDef="price">
-      <th mat-header-cell *matHeaderCellDef> Weight </th>
-      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
-    </ng-container>
+  <!-- Symbol Column -->
+  <ng-container matColumnDef="createdDate">
+    <th mat-header-cell *matHeaderCellDef> CreatedDate </th>
+    <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
+  </ng-container>
 
-    <!-- Symbol Column -->
-    <ng-container matColumnDef="createdDate">
-      <th mat-header-cell *matHeaderCellDef> CreatedDate </th>
-      <td mat-cell *matCellDef="let element"> {{element.createdDate}} </td>
-    </ng-container>
+  <ng-container matColumnDef="modifiedDate">
+    <th mat-header-cell *matHeaderCellDef> ModifiedDate </th>
+    <td mat-cell *matCellDef="let element"> {{element.modifiedDate}} </td>
+  </ng-container>
 
-    <ng-container matColumnDef="modifiedDate">
-        <th mat-header-cell *matHeaderCellDef> ModifiedDate </th>
-        <td mat-cell *matCellDef="let element"> {{element.modifiedDate}} </td>
-      </ng-container>
+  <ng-container matColumnDef="edit">
+    <th mat-header-cell *matHeaderCellDef>  </th>
+    <td mat-cell *matCellDef="let element" appEdit></td>
+  </ng-container>
 
-      <ng-container matColumnDef="edit">
-        <th mat-header-cell *matHeaderCellDef>  </th>
-        <td mat-cell *matCellDef="let element" appEdit ></td>
-      </ng-container>
-      <ng-container matColumnDef="delete">
-        <th mat-header-cell *matHeaderCellDef>  </th>
-        <td [id]="element.id" (callback)="listProduct()" mat-cell *matCellDef="let element" controllerName="products" appDelete></td>
-      </ng-container>
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  <ng-container matColumnDef="addPhoto">
+    <th mat-header-cell *matHeaderCellDef>  </th>
+    <td mat-cell *matCellDef="let element" (click)="addPhoto(element.id)" ><a><img style="cursor:pointer" width="50px" src="/assets/addPhoto.png" /></a></td>
+    
+  </ng-container>
+  
 
-  </table>
+  <ng-container matColumnDef="delete">
+    <th mat-header-cell *matHeaderCellDef>  </th>
+    <td [id]="element.id" (callback)="listProduct()" mat-cell *matCellDef="let element" controllerName="products" appDelete></td>
+  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+</table>
   <mat-paginator (page)="pageChanged()"
   [pageSizeOptions]="[5, 10, 20]"
   showFirstLastButtons
