--- a/src/app/dialogs/image-upload/image-upload.component.html
+++ b/src/app/dialogs/image-upload/image-upload.component.html
@@ -2,6 +2,21 @@
 <mat-dialog-content class="mat-typography">
   <app-file-upload [options]="options"></app-file-upload>
 </mat-dialog-content>
+
+<mat-card class="example-card" *ngFor="let image of productImages">
+  <mat-card-header>
+  </mat-card-header>
+  <img mat-card-image [src]="image.path">
+  <mat-card-content>
+
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-button style="background-color:red;color:white">DELETE</button>
+  </mat-card-actions>
+</mat-card>
+
+
+
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancel</button>
 </mat-dialog-actions>
