--- a/src/app/dialogs/image-upload/image-upload.component.html
+++ b/src/app/dialogs/image-upload/image-upload.component.html
@@ -3,7 +3,7 @@
   <app-file-upload [options]="options"></app-file-upload>
 </mat-dialog-content>
 
-<mat-card class="example-card" *ngFor="let image of productImages">
+<mat-card class="example-card" *ngFor="let image of productImages" id="image.id">
   <mat-card-header>
   </mat-card-header>
   <img mat-card-image [src]="image.path">
@@ -11,7 +11,7 @@
 
   </mat-card-content>
   <mat-card-actions>
-    <button mat-button style="background-color:red;color:white">DELETE</button>
+    <button mat-button style="background-color:red;color:white" (click)="deleteImage(image.id,$event)">DELETE</button>
   </mat-card-actions>
 </mat-card>
 
