--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,13 +13,16 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" routerLink="">Home</a>
+                                <a class="nav-link active" aria-current="page" routerLink="">Anasayfa</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" routerLink="products">Products</a>
+                                <a class="nav-link active" aria-current="page" routerLink="products">Ürünler</a>
+                            </li>
+                                <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" routerLink="register">Üye Ol</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" routerLink="basket">Basket</a>
+                                <a class="nav-link active" aria-current="page" routerLink="basket">Sepet</a>
                             </li>
                             <li><a class="btn btn-outline-success" type="submit" routerLink="admin">Admin Paneline
                                     Git</a></li>
