--- a/src/app/ui/components/register/register.component.html
+++ b/src/app/ui/components/register/register.component.html
@@ -4,28 +4,28 @@
             <form [formGroup]="frm" (ngSubmit)="onSubmit(frm.value)">
                 <div class="mb-3">
                     <label for="adsoyad" class="form-label">Ad Soyad:</label>
-                    <input formControlName="adSoyad" type="text" class="form-control" id="adsoyad" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text text-danger d-none ">We'll never share your email with anyone else.</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.adSoyad.errors}" formControlName="adSoyad" type="text" class="form-control" id="adsoyad" aria-describedby="emailHelp">
+                    <div *ngIf="submitted && component.adSoyad.errors.required" id="emailHelp" class="form-text text-danger">Ad Soyad alanı boş geçilemez</div>
                 </div>
                 <div class="mb-3">
                     <label for="kullaniciAdi" class="form-label">Kullanıcı Adı:</label>
-                    <input formControlName="kullaniciAdi" type="text" class="form-control" id="kullaniciAdi" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text text-danger d-none ">We'll never share your email with anyone else.</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.kullaniciAdi.errors}" formControlName="kullaniciAdi" type="text" class="form-control" id="kullaniciAdi" aria-describedby="emailHelp">
+                    <div *ngIf="submitted && component.kullaniciAdi.errors.required" id="emailHelp" class="form-text text-danger">Kullanıcı adı alanı boş geçilemez</div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">E-Mail:</label>
-                    <input formControlName="email" type="email" class="form-control" id="email" aria-describedby="emailHelp">
-                    <div id="emailHelp" class="form-text text-danger d-none ">We'll never share your email with anyone else.</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.email.errors}" formControlName="email" type="email" class="form-control" id="email" aria-describedby="emailHelp">
+                    <div *ngIf="submitted && component.email.errors.required" id="emailHelp" class="form-text text-danger">E-Mail alanı boş geçilemez</div>
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Şifre:</label>
-                    <input formControlName="password" type="password" class="form-control" id="password">
-                    <div id="emailHelp" class="form-text text-danger d-none ">We'll never share your email with anyone else.</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.password.errors}" formControlName="password" type="password" class="form-control" id="password">
+                    <div *ngIf="submitted && component.password.errors.required" id="emailHelp" class="form-text text-danger">Şifre alanı boş geçilemez</div>
                 </div>
                 <div class="mb-3">
                     <label for="passwordConfirm" class="form-label">Şifre(tekrar):</label>
-                    <input formControlName="passwordConfirm" type="password" class="form-control" id="passwordConfirm">
-                    <div id="emailHelp" class="form-text text-danger d-none ">We'll never share your email with anyone else.</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.passwordConfirm.errors}" formControlName="passwordConfirm" type="password" class="form-control" id="passwordConfirm">
+                    <div *ngIf="submitted && component.passwordConfirm.errors.required" id="emailHelp" class="form-text text-danger ">Şifre tekrar alanı boş geçilemez</div>
                 </div>
                 <button type="submit" class="btn btn-success">Kayıt Ol</button>
             </form>
