User create implemented

--- a/src/app/ui/components/register/register.component.html
+++ b/src/app/ui/components/register/register.component.html
@@ -4,14 +4,14 @@
             <form [formGroup]="frm" (ngSubmit)="onSubmit(frm.value)">
                 <div class="mb-3">
                     <label for="adsoyad" class="form-label">Ad Soyad:</label>
-                    <input [ngClass]="{'is-invalid': submitted && component.adSoyad.errors}" formControlName="adSoyad" type="text" class="form-control" id="adsoyad" aria-describedby="emailHelp">
-                    <div *ngIf="submitted && component.adSoyad.errors?.required" id="emailHelp" class="form-text text-danger">Ad Soyad alanı boş geçilemez</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.nameSurname.errors}" formControlName="nameSurname" type="text" class="form-control" id="adsoyad" aria-describedby="emailHelp">
+                    <div *ngIf="submitted && component.nameSurname.errors?.required" id="emailHelp" class="form-text text-danger">Ad Soyad alanı boş geçilemez</div>
                 </div>
                 <div class="mb-3">
                     <label for="kullaniciAdi" class="form-label">Kullanıcı Adı:</label>
-                    <input [ngClass]="{'is-invalid': submitted && component.kullaniciAdi.errors}" formControlName="kullaniciAdi" type="text" class="form-control" id="kullaniciAdi" aria-describedby="emailHelp">
-                    <div *ngIf="submitted && component.kullaniciAdi.errors?.required" id="emailHelp" class="form-text text-danger">Kullanıcı adı alanı boş geçilemez</div>
-                    <div *ngIf="submitted && (component.kullaniciAdi.errors?.maxlength || component.kullaniciAdi.errors?.minlength)" id="emailHelp" class="form-text text-danger">Minimum 3 maksimum 50 karakter girebilirsiniz</div>
+                    <input [ngClass]="{'is-invalid': submitted && component.username.errors}" formControlName="username" type="text" class="form-control" id="kullaniciAdi" aria-describedby="emailHelp">
+                    <div *ngIf="submitted && component.username.errors?.required" id="emailHelp" class="form-text text-danger">Kullanıcı adı alanı boş geçilemez</div>
+                    <div *ngIf="submitted && (component.username.errors?.maxlength || component.username.errors?.minlength)" id="emailHelp" class="form-text text-danger">Minimum 3 maksimum 50 karakter girebilirsiniz</div>
                 </div>
                 <div class="mb-3">
                     <label for="email" class="form-label">E-Mail:</label>
