--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,8 +18,11 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" routerLink="products">Ürünler</a>
                             </li>
-                                <li class="nav-item">
+                            <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" routerLink="register">Üye Ol</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" routerLink="login">Giriş Yap</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" routerLink="basket">Sepet</a>
