--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,15 +19,15 @@
                                 <a class="nav-link active" aria-current="page" routerLink="products">Ürünler</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" routerLink="register">Üye Ol</a>
+                                <a class="nav-link active" aria-current="page" routerLink="register" *ngIf="!authService.isAuthenticated">Üye Ol</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" routerLink="login">Giriş Yap</a>
+                                <a class="nav-link active" aria-current="page" routerLink="login" *ngIf="!authService.isAuthenticated">Giriş Yap</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" routerLink="basket">Sepet</a>
                             </li>
-                            <li><a class="btn btn-outline-success" type="submit" routerLink="admin">Admin Paneline
+                            <li><a class="btn btn-outline-success" type="submit" routerLink="admin" *ngIf="authService.isAuthenticated">Admin Paneline
                                     Git</a></li>
                         </ul>
                     </div>
